--- a/tests/templates/kuttl/tls/20-install-check.yaml.j2
+++ b/tests/templates/kuttl/tls/20-install-check.yaml.j2
@@ -15,6 +15,7 @@ spec:
       labels:
         app: trino-test-helper
     spec:
+      serviceAccount: integration-tests-sa
       securityContext:
         runAsUser: 1000
         runAsGroup: 1000
