docs: Add listener-operator where missing

--- a/docs/modules/trino/examples/getting_started/code/getting_started.sh.j2
+++ b/docs/modules/trino/examples/getting_started/code/getting_started.sh.j2
@@ -32,6 +32,7 @@ echo "Installing Operators with Helm"
 # tag::helm-install-operators[]
 helm install --wait commons-operator {{ helm.repo_name }}/commons-operator --version {{ versions.commons }}
 helm install --wait secret-operator {{ helm.repo_name }}/secret-operator --version {{ versions.secret }}
+helm install --wait listener-operator {{ helm.repo_name }}/listener-operator --version {{ versions.listener }}
 helm install --wait trino-operator {{ helm.repo_name }}/trino-operator --version {{ versions.trino }}
 # end::helm-install-operators[]
 ;;
@@ -41,6 +42,7 @@ echo "installing Operators with stackablectl"
 stackablectl operator install \
   commons={{ versions.commons }} \
   secret={{ versions.secret }} \
+  listener={{ versions.listener }} \
   trino={{ versions.trino }}
 # end::stackablectl-install-operators[]
 ;;
