feat(test): pull policy IfNotPresent
Part of https://github.com/stackabletech/issues/issues/481

--- a/tests/templates/kuttl/cluster-operation/10-install-trino.yaml.j2
+++ b/tests/templates/kuttl/cluster-operation/10-install-trino.yaml.j2
@@ -6,6 +6,7 @@ metadata:
 spec:
   image:
     productVersion: "{{ test_scenario['values']['trino-latest'] }}"
+    pullPolicy: IfNotPresent
   clusterConfig:
     catalogLabelSelector: {}
 {% if lookup('env', 'VECTOR_AGGREGATOR') %}
