--- a/tests/templates/kuttl/smoke/06-install-hdfs.yaml.j2
+++ b/tests/templates/kuttl/smoke/06-install-hdfs.yaml.j2
@@ -6,6 +6,7 @@ metadata:
 spec:
   image:
     productVersion: "{{ test_scenario['values']['hdfs'] }}"
+    pullPolicy: IfNotPresent
   clusterConfig:
     dfsReplication: 1
 {% if lookup('env', 'VECTOR_AGGREGATOR') %}
