--- a/tests/templates/kuttl/tls/10-install-trino.yaml.j2
+++ b/tests/templates/kuttl/tls/10-install-trino.yaml.j2
@@ -56,6 +56,7 @@ metadata:
 spec:
   image:
     productVersion: "{{ test_scenario['values']['trino-latest'] }}"
+    pullPolicy: IfNotPresent
   clusterConfig:
     catalogLabelSelector: {}
 {% if lookup('env', 'VECTOR_AGGREGATOR') %}
