--- a/tests/templates/kuttl/authentication/create-authentication-classes.yaml.j2
+++ b/tests/templates/kuttl/authentication/create-authentication-classes.yaml.j2
@@ -10,6 +10,7 @@ spec:
       port: 8080
       rootPath: /realms/stackable
       scopes: ["openid"]
+      principalClaim: preferred_username
 ---
 apiVersion: v1
 kind: Secret
