--- a/tests/templates/kuttl/authentication/04-install-keycloak.yaml.j2
+++ b/tests/templates/kuttl/authentication/04-install-keycloak.yaml.j2
@@ -15,48 +15,54 @@ spec:
       labels:
         app: keycloak
     spec:
-      serviceAccountName: keycloak
-      volumes:
-        - name: keycloak-import-dir
-          configMap:
-            name: keycloak-realm
       containers:
         - name: keycloak
-          image: quay.io/keycloak/keycloak:22.0.3
-          # Keycloak is running in development mode: https://www.keycloak.org/server/configuration#_starting_keycloak
-          # production mode disables HTTP and requires a TLS configuration, which is currently very difficult to configure
-          # given that we're running on a NodePort
-          args: ["start-dev", "--import-realm"]
+          image: quay.io/keycloak/keycloak:23.0.6
+          args:
+            - start-dev
+            - --import-realm
+            - --https-certificate-file=/tls/tls.crt
+            - --https-certificate-key-file=/tls/tls.key
           env:
             - name: KEYCLOAK_ADMIN
               value: admin
             - name: KEYCLOAK_ADMIN_PASSWORD
               value: admin
           ports:
-            - name: http
-              containerPort: 8080
+            - name: https
+              containerPort: 8443
+          volumeMounts:
+            - name: realms
+              mountPath: /opt/keycloak/data/import
+            - name: tls
+              mountPath: /tls
           readinessProbe:
             httpGet:
-              path: /realms/master
-              port: 8080
-          volumeMounts:
-            - name: keycloak-import-dir
-              mountPath: /opt/keycloak/data/import
+              scheme: HTTPS
+              path: /realms/stackable
+              port: 8443
+      serviceAccountName: keycloak
+      volumes:
+        - name: realms
+          configMap:
+            name: keycloak-realms
+        - name: tls
+          csi:
+            driver: secrets.stackable.tech
+            volumeAttributes:
+              secrets.stackable.tech/class: tls
+              secrets.stackable.tech/scope: service=keycloak
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: keycloak
-  labels:
-    app: keycloak
 spec:
-  type: NodePort
   selector:
     app: keycloak
   ports:
-    - name: http
-      port: 8080
-      targetPort: 8080
+    - protocol: TCP
+      port: 8443
 ---
 apiVersion: v1
 kind: ServiceAccount
