Fix OIDC client credentials in the test and example

--- a/tests/templates/kuttl/authentication/create-authentication-classes.yaml.j2
+++ b/tests/templates/kuttl/authentication/create-authentication-classes.yaml.j2
@@ -25,8 +25,8 @@ metadata:
   namespace: $NAMESPACE
 type: kubernetes.io/opaque
 stringData:
-  clientId: superset
-  clientSecret: superset-client-secret
+  clientId: trino
+  clientSecret: trino-client-secret
 ---
 apiVersion: authentication.stackable.tech/v1alpha1
 kind: AuthenticationClass
