add to test definitions

--- a/tests/templates/kuttl/opa-authorization/20-install-trino.yaml.j2
+++ b/tests/templates/kuttl/opa-authorization/20-install-trino.yaml.j2
@@ -5,7 +5,7 @@ metadata:
   name: trino
 spec:
   image:
-    productVersion: "{{ test_scenario['values']['trino'] }}"
+    productVersion: "{{ test_scenario['values']['trino-latest'] }}"
     pullPolicy: IfNotPresent
   clusterConfig:
     catalogLabelSelector:
