OpenID Connect support (#501)
* use sso oidc branch in operator-rs

* adapt to ldap changes

* adapt to operator-rs refactoring

* wip

* wip - working with keycloak

* wip - refactoring

* update operataor-rs

* adapt to private bind credentials

* make secretclass configurable

* wip

* fix existing unit tests

* use operator-rs oidc helpers and add tests

* cleanup

* wip integration tests

* Update check-oauth-login.py

* wip - starting oidc tls

* Uopdate to new operator-rs version

* Uodate to new operator-rs

* fix clippy lint

* charts

* Pull in new operator-rs

* update to new operator-rs

* charts

* newlines

* new operator-rs

* update to new operator-rs

* Update operator-rs

* update operator-rs

* update operator-rs

* bump

* feat: Implement principalClaim handling in OIDC

* fix build

* fix clippy lints

* cargo fmt

* charts

* Remove unused dev-dependency

* Fix integration tests

* Revise code and tests

* Update changelog

* Fix OIDC client credentials in the test and example

* Document OIDC support

* Fix authentication test

* Remove TODO

* Fix comment

Co-authored-by: Andrew Kenworthy <andrew.kenworthy@stackable.de>

---------

Co-authored-by: Malte Sander <malte.sander.it@gmail.com>
Co-authored-by: Razvan-Daniel Mihai <84674+razvan@users.noreply.github.com>
Co-authored-by: Siegfried Weber <mail@siegfriedweber.net>
Co-authored-by: Andrew Kenworthy <andrew.kenworthy@stackable.de>

--- a/tests/templates/kuttl/authentication/create-authentication-classes.yaml.j2
+++ b/tests/templates/kuttl/authentication/create-authentication-classes.yaml.j2
@@ -2,6 +2,35 @@
 apiVersion: authentication.stackable.tech/v1alpha1
 kind: AuthenticationClass
 metadata:
+  name: oidc-$NAMESPACE
+spec:
+  provider:
+    oidc:
+      hostname: keycloak.$NAMESPACE.svc.cluster.local
+      port: 8443
+      rootPath: /realms/stackable
+      scopes:
+        - openid
+      principalClaim: preferred_username
+      tls:
+        verification:
+          server:
+            caCert:
+              secretClass: tls
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: oidc-secret
+  namespace: $NAMESPACE
+type: kubernetes.io/opaque
+stringData:
+  clientId: trino
+  clientSecret: trino-client-secret
+---
+apiVersion: authentication.stackable.tech/v1alpha1
+kind: AuthenticationClass
+metadata:
   name: password-$NAMESPACE
 spec:
   provider:
