--- a/tests/templates/kuttl/authentication/create-trino-cluster.yaml.j2
+++ b/tests/templates/kuttl/authentication/create-trino-cluster.yaml.j2
@@ -24,6 +24,9 @@ spec:
     vectorAggregatorConfigMapName: vector-aggregator-discovery
 {% endif %}
     authentication:
+      - authenticationClass: oidc-$NAMESPACE
+        oidc:
+          clientCredentialsSecret: oidc-secret
       - authenticationClass: password-$NAMESPACE
       - authenticationClass: password-other-$NAMESPACE
       - authenticationClass: ldap-$NAMESPACE
