add bob user, test banned user, add query tables test

--- a/tests/templates/kuttl/opa-authorization/20-install-trino.yaml.j2
+++ b/tests/templates/kuttl/opa-authorization/20-install-trino.yaml.j2
@@ -55,14 +55,10 @@ metadata:
 type: kubernetes.io/opaque
 stringData:
   admin: admin
-  superset: superset
+  banned-user: banned-user
+  bob: bob
   data-analyst-1: data-analyst-1
   data-analyst-2: data-analyst-2
-  data-analyst-3: data-analyst-3
-  customer-1-user-1: customer-1-user-1
-  customer-1-user-2: customer-1-user-2
-  customer-2-user-1: customer-2-user-1
-  customer-2-user-2: customer-2-user-2
 ---
 apiVersion: trino.stackable.tech/v1alpha1
 kind: TrinoCatalog
