create insert select drop table

--- a/tests/templates/kuttl/opa-authorization/20-install-trino.yaml.j2
+++ b/tests/templates/kuttl/opa-authorization/20-install-trino.yaml.j2
@@ -57,8 +57,7 @@ stringData:
   admin: admin
   banned-user: banned-user
   bob: bob
-  data-analyst-1: data-analyst-1
-  data-analyst-2: data-analyst-2
+  group-user: group-user
 ---
 apiVersion: trino.stackable.tech/v1alpha1
 kind: TrinoCatalog
