--- a/tests/templates/kuttl/opa-authorization/20-install-trino.yaml.j2
+++ b/tests/templates/kuttl/opa-authorization/20-install-trino.yaml.j2
@@ -56,8 +56,9 @@ type: kubernetes.io/opaque
 stringData:
   admin: admin
   banned-user: banned-user
-  bob: bob
   group-user: group-user
+  lakehouse: lakehouse
+  select-columns: select-columns
 ---
 apiVersion: trino.stackable.tech/v1alpha1
 kind: TrinoCatalog
