add iceberg user for insert delete tests

--- a/tests/templates/kuttl/opa-authorization/20-install-trino.yaml.j2
+++ b/tests/templates/kuttl/opa-authorization/20-install-trino.yaml.j2
@@ -59,6 +59,7 @@ stringData:
   group-user: group-user
   lakehouse: lakehouse
   select-columns: select-columns
+  iceberg: iceberg
 ---
 apiVersion: trino.stackable.tech/v1alpha1
 kind: TrinoCatalog
