--- a/tests/templates/kuttl/authentication/install-openldap-other.yaml.j2
+++ b/tests/templates/kuttl/authentication/install-openldap-other.yaml.j2
@@ -61,6 +61,13 @@ spec:
           readinessProbe:
             tcpSocket:
               port: 1389
+          # See https://github.com/bitnami/containers/issues/40841#issuecomment-1649977191
+          securityContext:
+           capabilities:
+             drop:
+             - ALL
+             add:
+             - NET_BIND_SERVICE
       volumes:
         - name: tls
           csi:
