added security context back in for non-Openshift case

--- a/tests/templates/kuttl/authentication/05-install-test-trino.yaml.j2
+++ b/tests/templates/kuttl/authentication/05-install-test-trino.yaml.j2
@@ -16,6 +16,10 @@ spec:
         app: test-trino
     spec:
       serviceAccount: integration-tests-sa
+{% if test_scenario['values']['openshift'] == 'false' %}
+      securityContext:
+        fsGroup: 1000
+{% endif %}
       containers:
         - name: test-trino
           image: docker.stackable.tech/stackable/testing-tools:0.2.0-stackable0.0.0-dev
