--- a/tests/templates/kuttl/opa-authorization/03-install-hive.yaml.j2
+++ b/tests/templates/kuttl/opa-authorization/03-install-hive.yaml.j2
@@ -10,8 +10,7 @@ spec:
   clusterConfig:
     database:
       connString: jdbc:postgresql://postgresql:5432/hive
-      user: hive
-      password: hive
+      credentialsSecret: postgres-credentials
       dbType: postgres
     s3:
       reference: minio
@@ -25,3 +24,12 @@ spec:
     roleGroups:
       default:
         replicas: 1
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: postgres-credentials
+type: Opaque
+stringData:
+  username: hive
+  password: hive        
