Fix decision logging in the OPA authorization test

--- a/tests/templates/kuttl/opa-authorization/10-install-opa.yaml.j2
+++ b/tests/templates/kuttl/opa-authorization/10-install-opa.yaml.j2
@@ -34,5 +34,10 @@ commands:
           config:
             logging:
               enableVectorAgent: {{ lookup('env', 'VECTOR_AGGREGATOR') | length > 0 }}
+              containers:
+                opa:
+                  loggers:
+                    decision:
+                      level: INFO
           roleGroups:
             default: {}
