--- a/tests/templates/kuttl/authentication/create-trino-cluster.yaml.j2
+++ b/tests/templates/kuttl/authentication/create-trino-cluster.yaml.j2
@@ -18,6 +18,7 @@ metadata:
 spec:
   image:
     productVersion: "'"{{ test_scenario['values']['trino-latest'] }}"'"
+    pullPolicy: IfNotPresent
   clusterConfig:
     catalogLabelSelector: {}
 {% if lookup('env', 'VECTOR_AGGREGATOR') %}
