chore: Bump to Hive 4.0.0

--- a/tests/templates/kuttl/opa-authorization/03-install-hive.yaml.j2
+++ b/tests/templates/kuttl/opa-authorization/03-install-hive.yaml.j2
@@ -5,7 +5,7 @@ metadata:
   name: hive
 spec:
   image:
-    productVersion: "{{ test_scenario['values']['hive'] }}"
+    productVersion: "{{ test_scenario['values']['hive-latest'] }}"
     pullPolicy: IfNotPresent
   clusterConfig:
     database:
