--- a/tests/templates/kuttl/smoke/09-install-opa.yaml.j2
+++ b/tests/templates/kuttl/smoke/09-install-opa.yaml.j2
@@ -22,7 +22,7 @@ metadata:
   labels:
     opa.stackable.tech/bundle: "trino"
 data:
-{% if test_scenario['values']['trino'] in [414] %}
+{% if test_scenario['values']['trino'] in ["414"] %}
   trino.rego: |
     package trino
 
