Allow using custom images in tests

--- a/tests/templates/kuttl/logging/03-install-trino.yaml.j2
+++ b/tests/templates/kuttl/logging/03-install-trino.yaml.j2
@@ -31,7 +31,12 @@ metadata:
   name: test-trino
 spec:
   image:
+{% if test_scenario['values']['trino'].find(",") > 0 %}
+    custom: "{{ test_scenario['values']['trino'].split(',')[1] }}"
+    productVersion: "{{ test_scenario['values']['trino'].split(',')[0] }}"
+{% else %}
     productVersion: "{{ test_scenario['values']['trino'] }}"
+{% endif %}
     pullPolicy: IfNotPresent
   clusterConfig:
     catalogLabelSelector: {}
