--- a/tests/templates/kuttl/tls/10-install-trino.yaml.j2
+++ b/tests/templates/kuttl/tls/10-install-trino.yaml.j2
@@ -55,7 +55,12 @@ metadata:
   name: trino
 spec:
   image:
+{% if test_scenario['values']['trino-latest'].find(",") > 0 %}
+    custom: "{{ test_scenario['values']['trino-latest'].split(',')[1] }}"
+    productVersion: "{{ test_scenario['values']['trino-latest'].split(',')[0] }}"
+{% else %}
     productVersion: "{{ test_scenario['values']['trino-latest'] }}"
+{% endif %}
     pullPolicy: IfNotPresent
   clusterConfig:
     catalogLabelSelector: {}
