--- a/tests/templates/kuttl/authentication/create-trino-cluster.yaml.j2
+++ b/tests/templates/kuttl/authentication/create-trino-cluster.yaml.j2
@@ -17,7 +17,12 @@ metadata:
   namespace: $NAMESPACE
 spec:
   image:
+{% if test_scenario['values']['trino-latest'].find(",") > 0 %}
+    custom: "{{ test_scenario['values']['trino-latest'].split(',')[1] }}"
+    productVersion: "'"{{ test_scenario['values']['trino-latest'].split(',')[0] }}"'"
+{% else %}
     productVersion: "'"{{ test_scenario['values']['trino-latest'] }}"'"
+{% endif %}
     pullPolicy: IfNotPresent
   clusterConfig:
     catalogLabelSelector: {}
