Update tests and docs

--- a/tests/templates/kuttl/authentication/create-authentication-classes.yaml.j2
+++ b/tests/templates/kuttl/authentication/create-authentication-classes.yaml.j2
@@ -8,7 +8,7 @@ spec:
     oidc:
       hostname: keycloak.$NAMESPACE.svc.cluster.local
       port: 8443
-      rootPath: /realms/stackable
+      rootPath: /realms/stackable/
       scopes:
         - openid
       principalClaim: preferred_username
