Apply Java heap size limit to Keycloak in opa-authorization test
It was hitting against the container memory limits, and getting oomkilled.

--- a/tests/templates/kuttl/opa-authorization/04-install-keycloak.yaml.j2
+++ b/tests/templates/kuttl/opa-authorization/04-install-keycloak.yaml.j2
@@ -91,6 +91,8 @@ commands:
                       secretKeyRef:
                         name: user-info-fetcher-client-credentials
                         key: clientSecret
+                  - name: JAVA_OPTS_KC_HEAP
+                    value: -Xmx500M
                 ports:
                   - name: https
                     containerPort: 8443
