replace docker references with oci

--- a/tests/templates/kuttl/authentication/05-install-test-trino.yaml.j2
+++ b/tests/templates/kuttl/authentication/05-install-test-trino.yaml.j2
@@ -22,7 +22,7 @@ spec:
 {% endif %}
       containers:
         - name: test-trino
-          image: docker.stackable.tech/stackable/testing-tools:0.2.0-stackable0.0.0-dev
+          image: oci.stackable.tech/sdp/testing-tools:0.2.0-stackable0.0.0-dev
           command: ["sleep", "infinity"]
           volumeMounts:
             - name: tls
