--- a/tests/templates/kuttl/smoke/08-install-hive.yaml.j2
+++ b/tests/templates/kuttl/smoke/08-install-hive.yaml.j2
@@ -23,6 +23,9 @@ spec:
     config:
       logging:
         enableVectorAgent: {{ lookup('env', 'VECTOR_AGGREGATOR') | length > 0 }}
+      resources:
+        memory:
+          limit: "1Gi"
     roleGroups:
       default:
         replicas: 2
