--- a/tests/templates/kuttl/opa-authorization/02-install-minio.yaml.j2
+++ b/tests/templates/kuttl/opa-authorization/02-install-minio.yaml.j2
@@ -5,7 +5,7 @@ commands:
   - script: >-
       helm install minio
       --namespace $NAMESPACE
-      --version 12.6.4
+      --version 15.0.7
       -f helm-bitnami-minio-values.yaml
-      --repo https://charts.bitnami.com/bitnami minio
+      oci://registry-1.docker.io/bitnamicharts/minio
     timeout: 240
