--- a/tests/templates/kuttl/opa-authorization/check-opa.py.j2
+++ b/tests/templates/kuttl/opa-authorization/check-opa.py.j2
@@ -51,7 +51,11 @@ TEST_DATA = [
             {
                 "query": "SET SESSION iceberg.test=true",
                 # The requests are authorized, just a fake property
+{% if test_scenario['values']['trino'] == '470' %}
                 "error": "Session property iceberg.test does not exist",
+{% else %}
+                "error": "Session property 'iceberg.test' does not exist",
+{% endif %}
             },
             # ## SCHEMA ##
             # ExecuteQuery, AccessCatalog, ShowSchemas, SelectFromColumns, FilterCatalogs, FilterSchemas
