test(opa-authorization): Allow custom images for OPA

--- a/tests/templates/kuttl/opa-authorization/10-install-opa.yaml.j2
+++ b/tests/templates/kuttl/opa-authorization/10-install-opa.yaml.j2
@@ -11,7 +11,12 @@ commands:
         name: opa
       spec:
         image:
+{% if test_scenario['values']['opa'].find(",") > 0 %}
+          custom: "{{ test_scenario['values']['opa'].split(',')[1] }}"
+          productVersion: "{{ test_scenario['values']['opa'].split(',')[0] }}"
+{% else %}
           productVersion: "{{ test_scenario['values']['opa'] }}"
+{% endif %}
           pullPolicy: IfNotPresent
         clusterConfig:
           userInfo:
