chore: Remove hardcoded uid and gid (#752)
* chore: Remove hardcoded uid and gid

* fix: add @staticmethod decorators

---------

Co-authored-by: Razvan-Daniel Mihai <84674+razvan@users.noreply.github.com>

--- a/tests/templates/kuttl/opa-authorization/check-opa.py.j2
+++ b/tests/templates/kuttl/opa-authorization/check-opa.py.j2
@@ -3,7 +3,7 @@ import argparse
 import pytest
 import trino
 
-from datetime import datetime
+from datetime import datetime, UTC
 from trino.exceptions import TrinoUserError
 
 import urllib3
@@ -501,15 +501,18 @@ class TestOpa:
 
             print("")
 
+    @staticmethod
     def log(user, query):
-        timestamp = datetime.utcnow().isoformat(sep=" ", timespec="milliseconds")
+        timestamp = datetime.now(UTC).isoformat(sep=" ", timespec="milliseconds")
         print(f"[{timestamp}] - {user:20s} -> {query}")
 
+    @staticmethod
     def run_query(connection, query):
         cursor = connection.cursor()
         cursor.execute(query)
         return cursor.fetchall()
 
+    @staticmethod
     def get_connection(username, password, namespace, impersonation=None):
         connection = trino.dbapi.connect(
             host="trino-coordinator.{0}.svc.cluster.local".format(namespace),
