--- a/tests/templates/kuttl/tls/10-assert.yaml.j2
+++ b/tests/templates/kuttl/tls/10-assert.yaml.j2
@@ -22,13 +22,9 @@ status:
 apiVersion: v1
 kind: Service
 metadata:
-  name: trino-coordinator
+  name: trino-coordinator-default
 spec:
   ports:
-    - name: metrics
-      port: 8081
-      protocol: TCP
-      targetPort: 8081
 {% if test_scenario['values']['use-tls'] == 'false' %}
     - name: http
       port: 8080
