--- a/tests/templates/kuttl/tls/10-assert.yaml.j2
+++ b/tests/templates/kuttl/tls/10-assert.yaml.j2
@@ -22,7 +22,7 @@ status:
 apiVersion: v1
 kind: Service
 metadata:
-  name: trino-coordinator-default
+  name: trino-coordinator
 spec:
   ports:
 {% if test_scenario['values']['use-tls'] == 'false' %}
