--- a/tests/templates/kuttl/authentication/install-openldap.yaml.j2
+++ b/tests/templates/kuttl/authentication/install-openldap.yaml.j2
@@ -33,7 +33,7 @@ spec:
       serviceAccountName: "ldap-sa"
       containers:
         - name: openldap
-          image: docker.io/bitnami/openldap:2.5
+          image: docker.io/bitnamilegacy/openldap:2.5
           env:
             - name: LDAP_ADMIN_USERNAME
               value: admin
