feat: use PascalCase for Query/Task / allow configOverrides for exchange manager

--- a/tests/templates/kuttl/fault-tolerant-execution/02-install-trino.yaml.j2
+++ b/tests/templates/kuttl/fault-tolerant-execution/02-install-trino.yaml.j2
@@ -18,7 +18,7 @@ spec:
         trino: trino-fte
     # Fault tolerant execution with S3/MinIO exchange manager
     faultTolerantExecution:
-      retryPolicy: TASK
+      retryPolicy: Task
       exchangeManager:
         s3:
           baseDirectories:
