feat!: restructured CRD

--- a/tests/templates/kuttl/fault-tolerant-execution/02-install-trino.yaml.j2
+++ b/tests/templates/kuttl/fault-tolerant-execution/02-install-trino.yaml.j2
@@ -18,13 +18,13 @@ spec:
         trino: trino-fte
     # Fault tolerant execution with S3/MinIO exchange manager
     faultTolerantExecution:
-      retryPolicy: Task
-      exchangeManager:
-        s3:
-          baseDirectories:
-            - "s3://exchange-bucket/"
-          connection:
-            reference: "minio"
+      task:
+        exchangeManager:
+          s3:
+            baseDirectories:
+              - "s3://exchange-bucket/"
+            connection:
+              reference: "minio"
 {% if lookup('env', 'VECTOR_AGGREGATOR') %}
     vectorAggregatorConfigMapName: vector-aggregator-discovery
 {% endif %}
