--- a/tests/templates/kuttl/client-spooling/02-install-trino.yaml.j2
+++ b/tests/templates/kuttl/client-spooling/02-install-trino.yaml.j2
@@ -16,13 +16,13 @@ spec:
     catalogLabelSelector:
       matchLabels:
         trino: trino
-    clientSpoolingProtocol:
-      enabled: true
-      location: "s3://spooling-bucket/trino/"
-      filesystem:
-        s3:
-          connection:
-            reference: "minio"
+    clientProtocol:
+      spooling:
+        location: "s3://spooling-bucket/trino/"
+        filesystem:
+          s3:
+            connection:
+              reference: "minio"
 {% if lookup('env', 'VECTOR_AGGREGATOR') %}
     vectorAggregatorConfigMapName: vector-aggregator-discovery
 {% endif %}
