test: Enable OPA logging in kuttl tests

--- a/tests/templates/kuttl/opa-authorization/12-stop-opa.yaml.j2
+++ b/tests/templates/kuttl/opa-authorization/12-stop-opa.yaml.j2
@@ -14,5 +14,8 @@ spec:
     vectorAggregatorConfigMapName: vector-aggregator-discovery
 {% endif %}
   servers:
+    config:
+      logging:
+        enableVectorAgent: {{ lookup('env', 'VECTOR_AGGREGATOR') | length > 0 }}
     roleGroups:
       default: {}
