--- a/tests/templates/kuttl/smoke_aws/09-install-opa.yaml.j2
+++ b/tests/templates/kuttl/smoke_aws/09-install-opa.yaml.j2
@@ -12,6 +12,9 @@ spec:
     vectorAggregatorConfigMapName: vector-aggregator-discovery
 {% endif %}
   servers:
+    config:
+      logging:
+        enableVectorAgent: {{ lookup('env', 'VECTOR_AGGREGATOR') | length > 0 }}
     roleGroups:
       default: {}
 ---
