chore: use new testing-tools image

--- a/tests/templates/kuttl/tls/20-install-check.yaml.j2
+++ b/tests/templates/kuttl/tls/20-install-check.yaml.j2
@@ -20,7 +20,7 @@ spec:
         fsGroup: 1000
       containers:
         - name: trino-test-helper
-          image: oci.stackable.tech/sdp/testing-tools:0.2.0-stackable0.0.0-dev
+          image: oci.stackable.tech/sdp/testing-tools/trino:0.3.0-stackable0.0.0-dev
           command: ["sleep", "infinity"]
 {% if test_scenario['values']['use-tls'] == 'true' %}
           volumeMounts:
