--- a/tests/templates/kuttl/authentication/05-install-test-trino.yaml.j2
+++ b/tests/templates/kuttl/authentication/05-install-test-trino.yaml.j2
@@ -22,7 +22,7 @@ spec:
 {% endif %}
       containers:
         - name: trino-test-helper
-          image: oci.stackable.tech/sdp/testing-tools:0.2.0-stackable0.0.0-dev
+          image: oci.stackable.tech/sdp/testing-tools/trino:0.3.0-stackable0.0.0-dev
           command: ["sleep", "infinity"]
           volumeMounts:
             - name: tls
