add/adjust tests, add crd field to disable column masking

--- a/tests/templates/kuttl/smoke/10-install-trino.yaml.j2
+++ b/tests/templates/kuttl/smoke/10-install-trino.yaml.j2
@@ -19,6 +19,9 @@ spec:
     authentication:
       - authenticationClass: trino-users-auth
     authorization:
+{% if test_scenario['values']['trino'] == "451" %}
+      disableColumnMasking: true
+{% endif %}
       opa:
         configMapName: opa
         package: trino
@@ -32,6 +35,11 @@ spec:
     envOverrides:
       COMMON_VAR: role-value # overridden by role group below
       ROLE_VAR: role-value   # only defined here at role level
+{% if test_scenario['values']['trino'] == "451" %}
+    configOverrides:
+      access-control.properties:
+        opa.policy.column-masking-uri: "http://opa-server:8081/v1/data/trino/columnMask"
+{% endif %}
     roleGroups:
       default:
         replicas: 1
@@ -47,6 +55,11 @@ spec:
     envOverrides:
       COMMON_VAR: role-value # overridden by role group below
       ROLE_VAR: role-value   # only defined here at role level
+{% if test_scenario['values']['trino'] == "451" %}
+    configOverrides:
+      access-control.properties:
+        opa.policy.column-masking-uri: "http://opa-server:8081/v1/data/trino/columnMask"
+{% endif %}
     roleGroups:
       default:
         replicas: 1
