chore: Switch secret-operator volume to ephemeral

--- a/tests/templates/kuttl/authentication/05-install-test-trino.yaml.j2
+++ b/tests/templates/kuttl/authentication/05-install-test-trino.yaml.j2
@@ -32,8 +32,16 @@ spec:
               value: /stackable/tls/ca.crt
       volumes:
         - name: tls
-          csi:
-            driver: secrets.stackable.tech
-            volumeAttributes:
-              secrets.stackable.tech/class: tls
-              secrets.stackable.tech/scope: pod,node
+          ephemeral:
+            volumeClaimTemplate:
+              metadata:
+                annotations:
+                  secrets.stackable.tech/class: tls
+                  secrets.stackable.tech/scope: pod,node
+              spec:
+                storageClassName: secrets.stackable.tech
+                accessModes:
+                  - ReadWriteOnce
+                resources:
+                  requests:
+                    storage: "1"
