--- a/tests/templates/kuttl/authentication/install-openldap.yaml.j2
+++ b/tests/templates/kuttl/authentication/install-openldap.yaml.j2
@@ -70,11 +70,19 @@ spec:
               - NET_BIND_SERVICE
       volumes:
         - name: tls
-          csi:
-            driver: secrets.stackable.tech
-            volumeAttributes:
-              secrets.stackable.tech/class: openldap-tls-$NAMESPACE
-              secrets.stackable.tech/scope: pod
+          ephemeral:
+            volumeClaimTemplate:
+              metadata:
+                annotations:
+                  secrets.stackable.tech/class: openldap-tls-$NAMESPACE
+                  secrets.stackable.tech/scope: pod
+              spec:
+                storageClassName: secrets.stackable.tech
+                accessModes:
+                  - ReadWriteOnce
+                resources:
+                  requests:
+                    storage: "1"
 ---
 apiVersion: v1
 kind: Service
