--- a/tests/templates/kuttl/authentication/04-install-keycloak.yaml.j2
+++ b/tests/templates/kuttl/authentication/04-install-keycloak.yaml.j2
@@ -47,11 +47,19 @@ spec:
           configMap:
             name: keycloak-realms
         - name: tls
-          csi:
-            driver: secrets.stackable.tech
-            volumeAttributes:
-              secrets.stackable.tech/class: tls
-              secrets.stackable.tech/scope: service=keycloak
+          ephemeral:
+            volumeClaimTemplate:
+              metadata:
+                annotations:
+                  secrets.stackable.tech/class: tls
+                  secrets.stackable.tech/scope: service=keycloak
+              spec:
+                storageClassName: secrets.stackable.tech
+                accessModes:
+                  - ReadWriteOnce
+                resources:
+                  requests:
+                    storage: "1"
 ---
 apiVersion: v1
 kind: Service
