--- a/tests/templates/kuttl/smoke/10-install-trino.yaml.j2
+++ b/tests/templates/kuttl/smoke/10-install-trino.yaml.j2
@@ -19,12 +19,12 @@ spec:
     authentication:
       - authenticationClass: trino-users-auth
     authorization:
-{% if test_scenario['values']['trino'] == "451" %}
-      disableColumnMasking: true
-{% endif %}
       opa:
         configMapName: opa
         package: trino
+{% if test_scenario['values']['trino'] == "451" %}
+        enableColumnMasking: false
+{% endif %}
 {% if lookup('env', 'VECTOR_AGGREGATOR') %}
     vectorAggregatorConfigMapName: vector-aggregator-discovery
 {% endif %}
